test_regress/t/t_tagged_if.out
%Error-UNSUPPORTED: t/t_tagged_if.v:218:37: Unsupported: &&& expression
  218 |     if (instr matches tagged Jmp .j &&&
      |                                     ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_if.v:228:35: Unsupported: &&& expression
  228 |     if (v matches tagged Valid .n &&& (n > 50))
      |                                   ^~~
%Error-UNSUPPORTED: t/t_tagged_if.v:237:35: Unsupported: &&& expression
  237 |     if (v matches tagged Valid .n &&& (n > 50))
      |                                   ^~~
%Error-UNSUPPORTED: t/t_tagged_if.v:266:37: Unsupported: &&& expression
  266 |     if (instr matches tagged Jmp .j &&&
      |                                     ^~~
%Error: Exiting due to
